[gd_scene load_steps=23 format=2]

[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bat.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Effects/DeathEffect.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effects/HitEffect.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/PlayerDetection.tscn" type="PackedScene" id=7]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Boxes/SoftCollision.tscn" type="PackedScene" id=9]
[ext_resource path="res://Enemies/WanderingController.tscn" type="PackedScene" id=10]
[ext_resource path="res://Effects/HurtSound.tscn" type="PackedScene" id=11]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "fly",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 3.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 8.0
height = 6.0

[sub_resource type="CircleShape2D" id=9]
radius = 60.0

[sub_resource type="CircleShape2D" id=10]
radius = 4.0

[sub_resource type="CircleShape2D" id=11]
radius = 3.0

[node name="Bat" type="KinematicBody2D"]
position = Vector2( 0, 2 )
collision_layer = 4
script = ExtResource( 4 )
DEATH_SCENE = ExtResource( 5 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -13 )
frames = SubResource( 6 )
animation = "fly"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
visible = false
collision_layer = 16
HitEffect = ExtResource( 6 )
HurtSound = ExtResource( 11 )
SpriteToBlinkPath = NodePath("../AnimatedSprite")

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 8 )

[node name="HitPosition" parent="Hurtbox" index="1"]
position = Vector2( 0, -17 )

[node name="PlayerDetection" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
visible = false
collision_layer = 0
collision_mask = 8
IMPACT = 120

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 9 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 11 )

[node name="WanderingController" parent="." instance=ExtResource( 10 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]

[editable path="PlayerDetection"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
